--- a/Index.html
+++ b/Index.html
@@ -6,16 +6,12 @@
     <th>PICTURE No.</th>
         <th>PICTURE</th>
         <th>DESCRIPTION</th>
-    <th>PICTURE No.</th>
-        <th>PICTURE</th>
-        <th>DESCRIPTION</th>
-
 </tr>
   <tr>
     <td>1</td>
-    <td><img src="coastal1.jpg" width="250" helght="139" alt="Mos1 picture"> </td>
+    <td><img src="rose.1jpg" width="250" helght="139" alt="Mos1 picture"> </td>
     <td>A Thai island famous for beaches and tourism.</td>
 
-   <td>4</td>
-    <td><img src="flower2.jpg" width="250" helght="139" alt="Mos1 picture"> </td>
+   <td>2</td>
+    <td><img src="sunflower.2jpg" width="250" helght="139" alt="Mos1 picture"> </td>
     <td>A large yellow flower that follows the sun.
